Fixing styling of svelecte input with max width and position-fixed to keep the dropdown going down, instead of going up on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -29,7 +29,9 @@ body {
 }
 
 .svelecte {
-    max-width: 300px;
+	max-width: 75%;
+    width: 300px;
+	position: fixed;
   }
 
 h1,h2,h3{line-height:1.2}
